Latest changes uploded

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,8 @@ development:
   database: debt_friend_development
   pool: 5
   timeout: 5000
+  username: root
+  password: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
